# ufl

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  test_size_hint  test_size_hint.rs
.claude/: launch.json
.claude/agents/: architect.md  hater.md  nice-guy.md  orchestrator.md  qa.md
.github/workflows/: ci.yml
crates/: README.md
crates/ufl-core/: Cargo.toml
crates/ufl-core/examples/: hello_eml.rs
crates/ufl-core/src/: depth.rs  eml.rs  eval.rs  lib.rs  log.rs
crates/ufl-core/src/ga/: lift.rs  mod.rs  product.rs
crates/ufl-core/tests/: r_0001_acceptance.rs  r_0002_acceptance.rs
crates/ufl-discovery/: Cargo.toml
crates/ufl-discovery/examples/: hello_discharge.rs  hello_discovery.rs
crates/ufl-discovery/src/: engine.rs  flipgraph.rs  generic.rs  genome.rs  lib.rs  predicate.rs  prng.rs  proposer.rs
crates/ufl-discovery/tests/: r_0007_acceptance.rs  r_0008_acceptance.rs  r_0013_flipgraph.rs  r_0014_generic_seam.rs
crates/ufl-evolve/: Cargo.toml
crates/ufl-evolve/src/: baseline.rs  lib.rs  memetic.rs
crates/ufl-evolve/src/tasks/: mlp_baseline.rs  mod.rs
crates/ufl-evolve/tests/: r_0011m_gate1.rs
crates/ufl-ga/: Cargo.toml
crates/ufl-ga/examples/: hello_ga.rs
crates/ufl-ga/src/: lib.rs
crates/ufl-ga/tests/: r_0009_acceptance.rs
crates/ufl-geo/: Cargo.toml
crates/ufl-geo/benches/: render_bench.rs
crates/ufl-geo/examples/: hello_geo.rs
crates/ufl-geo/src/: eval.rs  expr.rs  grade.rs  lane.rs  lib.rs  render.rs  slots.rs
crates/ufl-geo/tests/: r_0010_acceptance.rs  r_0010_soundness.rs  r_0011m_slots.rs  render.rs
crates/ufl-predicate/: Cargo.toml
crates/ufl-predicate/examples/: hello_pred.rs
crates/ufl-predicate/src/: eval_pred.rs  lib.rs  predicate.rs
crates/ufl-predicate/tests/: r_0004_acceptance.rs  r_0016_acceptance.rs
crates/ufl-prng/: Cargo.toml
crates/ufl-prng/src/: lib.rs
crates/ufl-search/: Cargo.toml
crates/ufl-search/src/: lib.rs
crates/ufl-syntax/: Cargo.toml
crates/ufl-syntax/examples/: hello_sexpr.rs
crates/ufl-syntax/src/: lib.rs  lower.rs  read.rs  sexpr.rs
crates/ufl-syntax/tests/: r_0003_acceptance.rs  r_0016_raise.rs
crates/ufl-tensor/: Cargo.toml
crates/ufl-tensor/examples/: hello_strassen.rs
crates/ufl-tensor/src/: lib.rs  reconstruct.rs  scheme.rs  tensor.rs
crates/ufl-tensor/tests/: r_0006_acceptance.rs  security.rs
docs/: AllEle.html  conventions.md  garust-pga-contract.md  playground.html  the-shape-of-ufl.md  ufl-first-draft.md  why-ufl.md
docs/tasks/: 01-bank-the-flip-graph-land-r-0013-gate-0-green.md  02-triage-the-pr-fleet-merge-close-de-junk-refr.md  03-add-ci-enforcing-the-constitution-s-merge-ga.md  04-write-r-0015-and-r-0016-number-the-staircase.md  05-implement-quote-eval-raise-reflection-rung-1.md  06-adopt-one-depth-contract-across-read-print-l.md  07-write-spec-0014-harden-run-generic-errors-sc.md  08-land-ufl-evolve-memetic-engine-refiner-seam.md  09-commit-the-c2-c6-held-out-split-se-harness-a.md  10-add-formfitness-verifier-held-fitness-as-dis.md  11-run-the-rung-4-probe-moveform-dsl-meta-loop.md  12-discharge-r-0014-ac3-eml-nand-truth-table-ma.md  13-un-shelve-r-0005-spec-guarded-recursion-boun.md  14-deepen-the-grade-harness-fuzz-coverage-blade.md  README.md
experiments/: nand-embedding.py  q-ac4-branch.py  r0002-rotor.py
gapu-connection/: mapping.md
papers/: draft-v0.md
requirements/: 0001-eml-operator-core.md  0002-geometric-algebra-core.md  0003-sexpr-core.md  0004-predicate-layer.md  0005-value-conditional.md  0006-integer-tensor-core.md  0007-tensor-predicate.md  0008-discovery-engine.md  0009-pga-kernel-binding.md  0010-geometric-forms-grade-types.md  0011-geometric-neuroevolution.md  0012-f2-boolean-deduction.md  0013-matmul-moonshot.md  0014-discovery-framework.md  0015-evolve-operator-semantics.md  0016-reflection-quote-eval-raise.md  0017-depth-contract.md  README.md  TEMPLATE.md
specs/: 0001-eml-operator-core.md  0002-geometric-algebra-core.md  0003-sexpr-core.md  0004-predicate-layer.md  0006-integer-tensor-core.md  0007-tensor-predicate.md  0008-discovery-engine.md  0009-pga-kernel-binding.md  0010-geometric-forms-grade-types.md  0011-geometric-neuroevolution.md  0011-memetic-engine.md  0013-matmul-moonshot.md  0014-discovery-framework.md  0014-eml-nand-probe.md  0015-evolve-operator-semantics.md  0016-reflection-quote-eval-raise.md  0017-depth-contract.md  README.md  ROADMAP.md  TEMPLATE.md
theory/: atoms.md  discovery-results.md  log-ga-bridge.md  predicates.md  two-language-substrate.md  universal-computability.md
ufl-discovery/: FINDINGS.md  papers-review.md
