# UFL Rust workspace.
#
# Crates are added to `members` as their specs are accepted (spec-driven build).
# Planned decomposition: see crates/README.md.
[workspace]
resolver = "2"
members = [
    "crates/ufl-core",
    "crates/ufl-syntax",
    "crates/ufl-predicate",
    "crates/ufl-tensor",
    "crates/ufl-discovery",
    "crates/ufl-ga",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Gustavo Delgadillo <westerngazoo>"]
repository = "https://github.com/westerngazoo/ufl"
