[package]
name = "ufl-discovery"
version = "0.1.0"
description = "UFL — discovery bridge: the matmul-decomposition predicate P_{n,R} as a Hehner discharge (SPEC-0007), home of the future GA engine (R-0008)."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ufl-predicate = { path = "../ufl-predicate" }
ufl-tensor = { path = "../ufl-tensor" }
ufl-prng = { path = "../ufl-prng" }
ufl-search = { path = "../ufl-search" }
thiserror = "2"

# Test-only: the R-0007 acceptance suite exercises the scalar instance too
# (AC1/AC2 — `read` from ufl-syntax, `Value`/`eval` from ufl-core). Both are
# already transitive via ufl-predicate; the production graph is unchanged.
[dev-dependencies]
ufl-core = { path = "../ufl-core" }
ufl-syntax = { path = "../ufl-syntax" }
