[package]
name = "ufl-ga"
version = "0.1.0"
description = "UFL — the Cl(3,0,1) PGA geometric kernel: a thin facade over garust (SPEC-0009)."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# UFL's first external dependency. Pinned to a confirmed, CI-guarded contract
# surface (docs/garust-pga-contract.md). The locked rev — committed in
# Cargo.lock — is the real pin; the gate runs --locked.
garust = { git = "https://github.com/westerngazoo/garust", tag = "v0.1.0" }
